--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 01:39:00 AM</p>
+    <p class="lastupdate">09/19/2020 01:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">83%</td>
+        <td class="data">79%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.936 inHg (0.010)</td>
+        <td class="data">29.938 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="01:31:42 AM">
-            59.9</span>
+          <span title="01:43:40 AM">
+            59.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:31:42 AM" class="loval">
-            59.9</span>
+          <span title="01:43:40 AM" class="loval">
+            59.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:37:50 AM">
             55.0</span><br/>
-          <span title="12:30:54 AM">
-            54.3</span>
+          <span title="01:43:40 AM">
+            53.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:54:31 AM (Friday)">
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:24:00 AM">
             51</span><br/>
-          <span title="12:00:04 AM">
-            48</span>
+          <span title="01:44:00 AM">
+            47</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:24:00 AM (Saturday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 10 hours, 53 minutes</td>
+      <td class="data">17 days, 10 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 10 hours, 53 minutes</td>
+      <td class="data">17 days, 10 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
