--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 02:34:00 AM</p>
+    <p class="lastupdate">09/19/2020 02:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.2&#176;F</td>
+        <td class="data">56.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.2&#176;F</td>
+        <td class="data">56.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.2&#176;F</td>
+        <td class="data">56.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">82%</td>
+        <td class="data">83%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.940 inHg (0.000)</td>
+        <td class="data">29.938 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">73.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="02:33:42 AM">
-            56.2</span>
+          <span title="02:37:28 AM">
+            56.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:42 AM" class="loval">
-            56.2</span>
+          <span title="02:37:28 AM" class="loval">
+            56.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:37:50 AM">
             55.0</span><br/>
-          <span title="02:33:42 AM">
-            50.8</span>
+          <span title="02:35:36 AM">
+            50.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:54:31 AM (Friday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 11 hours, 47 minutes</td>
+      <td class="data">17 days, 11 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 11 hours, 47 minutes</td>
+      <td class="data">17 days, 11 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
