--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 03:44:00 AM</p>
+    <p class="lastupdate">09/19/2020 03:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">50.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">88%</td>
+        <td class="data">86%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.935 inHg (-0.003)</td>
+        <td class="data">29.936 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -118,7 +118,7 @@
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
-          <td class="data">New<br/>
+          <td class="data">Waxing crescent<br/>
             4%</td>
         </tr>
       </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             61.5</span><br/>
-          <span title="03:32:38 AM">
-            54.4</span>
+          <span title="03:47:40 AM">
+            54.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:32:38 AM" class="loval">
-            54.4</span>
+          <span title="03:47:40 AM" class="loval">
+            54.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:37:50 AM">
             55.0</span><br/>
-          <span title="03:26:30 AM">
-            50.3</span>
+          <span title="03:47:40 AM">
+            50.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:54:31 AM (Friday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 12 hours, 57 minutes</td>
+      <td class="data">17 days, 13 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 12 hours, 57 minutes</td>
+      <td class="data">17 days, 13 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
