--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 08:54:00 AM</p>
+    <p class="lastupdate">09/19/2020 08:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.4&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">85%</td>
+        <td class="data">84%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.967 inHg (0.025)</td>
+        <td class="data">29.966 inHg (0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">51%</td>
       </tr>
     </tbody>
   </table>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 18 hours, 7 minutes</td>
+      <td class="data">17 days, 18 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 18 hours, 7 minutes</td>
+      <td class="data">17 days, 18 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
