--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 09:09:00 AM</p>
+    <p class="lastupdate">09/19/2020 09:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">61.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">61.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">61.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.2&#176;F</td>
+        <td class="data">55.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">82%</td>
+        <td class="data">81%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (0.017)</td>
+        <td class="data">29.964 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NNE (22&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.6&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">51%</td>
       </tr>
     </tbody>
   </table>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:05:47 AM">
-            55.3</span><br/>
+          <span title="09:11:57 AM">
+            55.5</span><br/>
           <span title="05:45:12 AM">
             47.4</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 18 hours, 22 minutes</td>
+      <td class="data">17 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 18 hours, 22 minutes</td>
+      <td class="data">17 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
